[gd_scene load_steps=15 format=3 uid="uid://6sulqfhwngo1"]

[ext_resource type="Script" path="res://scripts/mainMenu.gd" id="1_h1rr2"]
[ext_resource type="PackedScene" uid="uid://dypmthvkpx2xs" path="res://Pool-Pack/Objects/floor.tscn" id="2_ctoxo"]
[ext_resource type="PackedScene" uid="uid://c7tqa8mbld8at" path="res://Pool-Pack/Objects/wall.tscn" id="3_ms3ff"]
[ext_resource type="PackedScene" uid="uid://b2vp4yvtgg6q7" path="res://Pool-Pack/Objects/cave_intersection.tscn" id="4_rua7q"]
[ext_resource type="PackedScene" uid="uid://bg3f525w7gkea" path="res://Pool-Pack/Objects/cave.tscn" id="5_wfbne"]
[ext_resource type="Texture2D" uid="uid://baw4ey863fgjx" path="res://environment/AllSkyFree_Sky_EpicBlueSunset_Equirect.png" id="6_cyoxi"]
[ext_resource type="Shader" uid="uid://bg4e6jb3sk0f7" path="res://environment/WaterShader.tres" id="7_sxft3"]
[ext_resource type="AudioStream" uid="uid://buklnt8ywkdw2" path="res://assets/audio/effects/ambient.wav" id="8_sao6t"]

[sub_resource type="PlaneMesh" id="PlaneMesh_rs6ei"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_ilkee"]
panorama = ExtResource("6_cyoxi")

[sub_resource type="Sky" id="Sky_qymcf"]
sky_material = SubResource("PanoramaSkyMaterial_ilkee")

[sub_resource type="Environment" id="Environment_tehaj"]
background_mode = 2
sky = SubResource("Sky_qymcf")
sky_rotation = Vector3(0, -1.5708, 0)
ambient_light_sky_contribution = 0.0
ssao_enabled = true
ssao_power = 2.27358
ssao_light_affect = 1.0
ssao_ao_channel_affect = 1.0
sdfgi_use_occlusion = true
sdfgi_bounce_feedback = 0.84
sdfgi_min_cell_size = 0.244141
sdfgi_cascade0_distance = 15.625
sdfgi_max_distance = 250.0
sdfgi_y_scale = 2
sdfgi_energy = 5.0
fog_enabled = true
fog_light_color = Color(0, 0, 0, 1)
fog_density = 0.0457
fog_aerial_perspective = 0.033
fog_sky_affect = 0.0
volumetric_fog_enabled = true
volumetric_fog_density = 0.002
volumetric_fog_albedo = Color(0, 0, 0, 1)
adjustment_enabled = true
adjustment_contrast = 1.2
adjustment_saturation = 1.3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p383r"]
render_priority = 0
shader = ExtResource("7_sxft3")
shader_parameter/Size = Vector2(15, 100)
shader_parameter/Scale = 5.0
shader_parameter/ColorParameter = Color(0, 0.913725, 0.870588, 1)
shader_parameter/EmissionColor = Color(0.419608, 1, 0.945098, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_oxwvs"]
lightmap_size_hint = Vector2i(81, 53)
size = Vector2(15, 100)
subdivide_width = 30
subdivide_depth = 80

[node name="Node3D" type="Node3D"]
process_mode = 3
script = ExtResource("1_h1rr2")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.528442, -3)
current = true

[node name="terrain" type="Node3D" parent="."]

[node name="tile1" type="Node3D" parent="terrain"]

[node name="floor2" parent="terrain/tile1" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -3.842, -3.97546)

[node name="floor3" parent="terrain/tile1" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -3.842, -9.97546)

[node name="floor4" parent="terrain/tile1" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -3.842, -15.9755)

[node name="floor6" parent="terrain/tile1" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.002, -3.842, -21.9755)

[node name="floor8" parent="terrain/tile1" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -3.842, -21.9755)

[node name="floor9" parent="terrain/tile1" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.998, -3.842, -21.9755)

[node name="wall2" parent="terrain/tile1" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -5, -4)

[node name="wall3" parent="terrain/tile1" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -5, -10)

[node name="wall4" parent="terrain/tile1" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -5, -16)

[node name="wall5" parent="terrain/tile1" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1.6, 0, 0, 0, 1, -9, -5, -22)

[node name="wall6" parent="terrain/tile1" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1.6, 0, 0, 0, 1, 9, -5, -22)

[node name="wall7" parent="terrain/tile1" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2.9998, -4.9992, -16.0002)

[node name="wall8" parent="terrain/tile1" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2.9998, -4.9992, -10.0003)

[node name="wall9" parent="terrain/tile1" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2.9998, -4.9992, -4.0004)

[node name="wall10" parent="terrain/tile1" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5.9999, -4.9993, -24.9999)

[node name="wall11" parent="terrain/tile1" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.9999, -4.9993, -24.9999)

[node name="wall12" parent="terrain/tile1" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.9999, -4.9993, -18.9999)

[node name="wall13" parent="terrain/tile1" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6.0001, -4.9993, -18.9999)

[node name="cave-intersection2" parent="terrain/tile1" instance=ExtResource("4_rua7q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6917, -21.9999)

[node name="cave2" parent="terrain/tile1" instance=ExtResource("5_wfbne")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.9999, 0.708297, -21.9999)

[node name="cave3" parent="terrain/tile1" instance=ExtResource("5_wfbne")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.0001, 0.708297, -21.9999)

[node name="cave5" parent="terrain/tile1" instance=ExtResource("5_wfbne")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.000100136, 0.691356, -15.9999)

[node name="cave6" parent="terrain/tile1" instance=ExtResource("5_wfbne")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.000100136, 0.691356, -9.9999)

[node name="cave7" parent="terrain/tile1" instance=ExtResource("5_wfbne")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.000100136, 0.691356, -3.9999)

[node name="tile2" type="Node3D" parent="terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -24)

[node name="floor2" parent="terrain/tile2" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -3.842, -3.97546)

[node name="floor3" parent="terrain/tile2" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -3.842, -9.97546)

[node name="floor4" parent="terrain/tile2" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -3.842, -15.9755)

[node name="floor6" parent="terrain/tile2" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.002, -3.842, -21.9755)

[node name="floor8" parent="terrain/tile2" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -3.842, -21.9755)

[node name="floor9" parent="terrain/tile2" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.998, -3.842, -21.9755)

[node name="wall2" parent="terrain/tile2" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -5, -4)

[node name="wall3" parent="terrain/tile2" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -5, -10)

[node name="wall4" parent="terrain/tile2" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -5, -16)

[node name="wall5" parent="terrain/tile2" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1.6, 0, 0, 0, 1, -9, -5, -22)

[node name="wall6" parent="terrain/tile2" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1.6, 0, 0, 0, 1, 9, -5, -22)

[node name="wall7" parent="terrain/tile2" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2.9998, -4.9992, -16.0002)

[node name="wall8" parent="terrain/tile2" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2.9998, -4.9992, -10.0003)

[node name="wall9" parent="terrain/tile2" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2.9998, -4.9992, -4.0004)

[node name="wall10" parent="terrain/tile2" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5.9999, -4.9993, -24.9999)

[node name="wall11" parent="terrain/tile2" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.9999, -4.9993, -24.9999)

[node name="wall12" parent="terrain/tile2" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.9999, -4.9993, -18.9999)

[node name="wall13" parent="terrain/tile2" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6.0001, -4.9993, -18.9999)

[node name="cave-intersection2" parent="terrain/tile2" instance=ExtResource("4_rua7q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6917, -21.9999)

[node name="cave2" parent="terrain/tile2" instance=ExtResource("5_wfbne")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.9999, 0.708297, -21.9999)

[node name="cave3" parent="terrain/tile2" instance=ExtResource("5_wfbne")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.0001, 0.708297, -21.9999)

[node name="cave5" parent="terrain/tile2" instance=ExtResource("5_wfbne")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.000100136, 0.691356, -15.9999)

[node name="cave6" parent="terrain/tile2" instance=ExtResource("5_wfbne")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.000100136, 0.691356, -9.9999)

[node name="cave7" parent="terrain/tile2" instance=ExtResource("5_wfbne")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.000100136, 0.691356, -3.9999)

[node name="tile3" type="Node3D" parent="terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -48)

[node name="floor2" parent="terrain/tile3" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -3.842, -3.97546)

[node name="floor3" parent="terrain/tile3" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -3.842, -9.97546)

[node name="floor4" parent="terrain/tile3" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -3.842, -15.9755)

[node name="floor6" parent="terrain/tile3" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.002, -3.842, -21.9755)

[node name="floor8" parent="terrain/tile3" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -3.842, -21.9755)

[node name="floor9" parent="terrain/tile3" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.998, -3.842, -21.9755)

[node name="wall2" parent="terrain/tile3" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -5, -4)

[node name="wall3" parent="terrain/tile3" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -5, -10)

[node name="wall4" parent="terrain/tile3" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -5, -16)

[node name="wall5" parent="terrain/tile3" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1.6, 0, 0, 0, 1, -9, -5, -22)

[node name="wall6" parent="terrain/tile3" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1.6, 0, 0, 0, 1, 9, -5, -22)

[node name="wall7" parent="terrain/tile3" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2.9998, -4.9992, -16.0002)

[node name="wall8" parent="terrain/tile3" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2.9998, -4.9992, -10.0003)

[node name="wall9" parent="terrain/tile3" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2.9998, -4.9992, -4.0004)

[node name="wall10" parent="terrain/tile3" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5.9999, -4.9993, -24.9999)

[node name="wall11" parent="terrain/tile3" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.9999, -4.9993, -24.9999)

[node name="wall12" parent="terrain/tile3" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.9999, -4.9993, -18.9999)

[node name="wall13" parent="terrain/tile3" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6.0001, -4.9993, -18.9999)

[node name="cave-intersection2" parent="terrain/tile3" instance=ExtResource("4_rua7q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6917, -21.9999)

[node name="cave2" parent="terrain/tile3" instance=ExtResource("5_wfbne")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.9999, 0.708297, -21.9999)

[node name="cave3" parent="terrain/tile3" instance=ExtResource("5_wfbne")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.0001, 0.708297, -21.9999)

[node name="cave5" parent="terrain/tile3" instance=ExtResource("5_wfbne")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.000100136, 0.691356, -15.9999)

[node name="cave6" parent="terrain/tile3" instance=ExtResource("5_wfbne")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.000100136, 0.691356, -9.9999)

[node name="cave7" parent="terrain/tile3" instance=ExtResource("5_wfbne")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.000100136, 0.691356, -3.9999)

[node name="tile4" type="Node3D" parent="terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -72)

[node name="floor2" parent="terrain/tile4" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -3.842, -3.97546)

[node name="floor3" parent="terrain/tile4" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -3.842, -9.97546)

[node name="floor4" parent="terrain/tile4" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -3.842, -15.9755)

[node name="floor6" parent="terrain/tile4" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.002, -3.842, -21.9755)

[node name="floor8" parent="terrain/tile4" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -3.842, -21.9755)

[node name="floor9" parent="terrain/tile4" instance=ExtResource("2_ctoxo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.998, -3.842, -21.9755)

[node name="wall2" parent="terrain/tile4" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -5, -4)

[node name="wall3" parent="terrain/tile4" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -5, -10)

[node name="wall4" parent="terrain/tile4" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -5, -16)

[node name="wall5" parent="terrain/tile4" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1.6, 0, 0, 0, 1, -9, -5, -22)

[node name="wall6" parent="terrain/tile4" instance=ExtResource("3_ms3ff")]
transform = Transform3D(1, 0, 0, 0, 1.6, 0, 0, 0, 1, 9, -5, -22)

[node name="wall14" parent="terrain/tile4" instance=ExtResource("3_ms3ff")]
transform = Transform3D(0, 0, -1, 0, 1.6, 0, 1, 0, 0, 0, -5, -25)

[node name="wall7" parent="terrain/tile4" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2.9998, -4.9992, -16.0002)

[node name="wall8" parent="terrain/tile4" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2.9998, -4.9992, -10.0003)

[node name="wall9" parent="terrain/tile4" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2.9998, -4.9992, -4.0004)

[node name="wall10" parent="terrain/tile4" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5.9999, -4.9993, -24.9999)

[node name="wall11" parent="terrain/tile4" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.9999, -4.9993, -24.9999)

[node name="wall12" parent="terrain/tile4" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.9999, -4.9993, -18.9999)

[node name="wall13" parent="terrain/tile4" instance=ExtResource("3_ms3ff")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6.0001, -4.9993, -18.9999)

[node name="cave-intersection2" parent="terrain/tile4" instance=ExtResource("4_rua7q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6917, -21.9999)

[node name="cave2" parent="terrain/tile4" instance=ExtResource("5_wfbne")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.9999, 0.708297, -21.9999)

[node name="cave3" parent="terrain/tile4" instance=ExtResource("5_wfbne")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.0001, 0.708297, -21.9999)

[node name="cave5" parent="terrain/tile4" instance=ExtResource("5_wfbne")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.000100136, 0.691356, -15.9999)

[node name="cave6" parent="terrain/tile4" instance=ExtResource("5_wfbne")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.000100136, 0.691356, -9.9999)

[node name="cave7" parent="terrain/tile4" instance=ExtResource("5_wfbne")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.000100136, 0.691356, -3.9999)

[node name="MeshInstance3D" type="MeshInstance3D" parent="terrain"]
transform = Transform3D(21.1, 0, 0, 0, 21.1, 0, 0, 0, 67.52, 0, 7, -70)
cast_shadow = 2
mesh = SubResource("PlaneMesh_rs6ei")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="terrain"]
transform = Transform3D(-21.1, 1.84462e-06, 0, -1.84462e-06, -21.1, 0, 0, 0, 67.52, 0, -14, -70)
cast_shadow = 2
mesh = SubResource("PlaneMesh_rs6ei")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="terrain"]
transform = Transform3D(-6.45617e-07, -21.1, 0, 14.77, -9.2231e-07, 0, 0, 0, 67.52, -18, -6, -70)
cast_shadow = 2
mesh = SubResource("PlaneMesh_rs6ei")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="terrain"]
transform = Transform3D(1.93685e-06, 21.1, 0, -14.77, 2.76693e-06, 0, 0, 0, 67.52, 14, -6, -70)
cast_shadow = 2
mesh = SubResource("PlaneMesh_rs6ei")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="terrain"]
transform = Transform3D(1.25232e-13, -9.2231e-07, -13.504, -14.77, 2.76693e-06, 0, 1.93685e-06, 21.1, -5.90278e-07, -16.4537, -6, -2)
cast_shadow = 2
mesh = SubResource("PlaneMesh_rs6ei")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="terrain"]
transform = Transform3D(1.25232e-13, -9.2231e-07, -13.504, -14.77, 2.76693e-06, 0, 1.93685e-06, 21.1, -5.90278e-07, -7.76302, -18.5102, -2)
cast_shadow = 2
mesh = SubResource("PlaneMesh_rs6ei")

[node name="MeshInstance3D9" type="MeshInstance3D" parent="terrain"]
transform = Transform3D(1.25232e-13, -9.2231e-07, -13.504, -14.77, 2.76693e-06, 0, 1.93685e-06, 21.1, -5.90278e-07, -7.76302, 18.3891, -2)
cast_shadow = 2
mesh = SubResource("PlaneMesh_rs6ei")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="terrain"]
transform = Transform3D(1.25232e-13, -9.2231e-07, -13.504, -14.77, 2.76693e-06, 0, 1.93685e-06, 21.1, -5.90278e-07, 16.4281, -6, -2)
cast_shadow = 2
mesh = SubResource("PlaneMesh_rs6ei")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="terrain"]
transform = Transform3D(4.4093e-14, 2.76693e-06, 16.88, -14.77, 2.76693e-06, 0, -1.93685e-06, -21.1, 2.21354e-06, -2, -6, -98)
cast_shadow = 2
mesh = SubResource("PlaneMesh_rs6ei")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tehaj")

[node name="SpotLight3D" type="SpotLight3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 0.999977, 0.00680675, 0, -0.00680675, 0.999977, 0, 0.187189, 11.9459)
light_color = Color(1, 0.960784, 0.929412, 1)
light_energy = 100.0
light_specular = 2.81
light_bake_mode = 1
spot_range = 57.2595
spot_angle = 17.7445

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.69415, -3.06068, -51.1403)
material_override = SubResource("ShaderMaterial_p383r")
mesh = SubResource("PlaneMesh_oxwvs")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -493.0
offset_top = -34.0
offset_right = -15.0
offset_bottom = -11.0
theme_override_font_sizes/normal_font_size = 14
text = "Game made by Guillermo Muñoz, Filip Lundström and Levente Vargas"
fit_content = true

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.031
anchor_top = 0.48
anchor_right = 0.317
anchor_bottom = 0.937
offset_left = 0.287998
offset_top = -0.0400085
offset_right = -0.18399
offset_bottom = -0.176025

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Start"
alignment = 0

[node name="Button2" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Options"
alignment = 0

[node name="Button3" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Exit
"
alignment = 0

[node name="ambient" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_sao6t")
volume_db = -80.0
autoplay = true
bus = &"Effects"

[connection signal="pressed" from="Control/Panel/MarginContainer/VBoxContainer/Button" to="." method="_on_start"]
[connection signal="pressed" from="Control/Panel/MarginContainer/VBoxContainer/Button2" to="." method="_on_options"]
[connection signal="pressed" from="Control/Panel/MarginContainer/VBoxContainer/Button3" to="." method="_on_exit"]
